# runit

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml  testpypi.yml
runit/: cli.py  monitor.py  plotting.py  report.py  utils.py
